kubernetes/apps/database/dragonfly/cluster/networkpolicy-clients.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/networking.k8s.io/networkpolicy_v1.json
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dragonfly-clients
spec:
  podSelector:
    matchLabels:
      app: dragonfly
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: llm
          podSelector:
            matchLabels:
              app.kubernetes.io/name: litellm
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: services
          podSelector:
            matchLabels:
              app.kubernetes.io/name: paperless
      ports:
        - port: 6379
          protocol: TCP
